err.txt
C:\Users\Stephan\Desktop\gameboy\temp_script_7.js:3
            "imports": {
                     ^

SyntaxError: Unexpected token ':'
    at wrapSafe (node:internal/modules/cjs/loader:1692:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.12.0
